@@ -465,6 +465,12 @@ bobmods.lib.recipe.set_ingredient('cement-mixture-2', {'solid-lime', 4})
 bobmods.lib.recipe.set_result('cement-mixture-2', {'solid-cement', 4})
 bobmods.lib.recipe.set_energy_required('cement-mixture-2', 16)
 
+-- Make Acetic Acid take red metal catalyst rather than green metal catalyst
+seablock.lib.substingredient('liquid-acetic-acid-catalyst', 'catalyst-metal-green', 'catalyst-metal-red', nil)
+
+-- Make Hydrazine take blue metal catalyst rather than green metal catalyst
+seablock.lib.substingredient('gas-hydrazine', 'catalyst-metal-green', 'catalyst-metal-blue', nil)
+
 -- Add yellow metal catalyst to Dinitrogen tetroxide gas recipe
 bobmods.lib.recipe.set_ingredient('gas-dinitrogen-tetroxide', {'catalyst-metal-yellow', 1})
 bobmods.lib.recipe.set_result('gas-dinitrogen-tetroxide', {'catalyst-metal-carrier', 1})
